@@ -6,8 +6,9 @@ import com.comet.opik.api.DeleteFeedbackScore;
 import com.comet.opik.api.DeleteTraceThreads;
 import com.comet.opik.api.ErrorInfo;
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreBatchContainer;
+import com.comet.opik.api.FeedbackScoreItem;
+import com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem.FeedbackScoreBatchItemBuilder;
 import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.Guardrail;
 import com.comet.opik.api.Project;
@@ -20,6 +21,7 @@ import com.comet.opik.api.TraceThread;
 import com.comet.opik.api.TraceThread.TraceThreadPage;
 import com.comet.opik.api.TraceThreadIdentifier;
 import com.comet.opik.api.TraceThreadStatus;
+import com.comet.opik.api.TraceThreadUpdate;
 import com.comet.opik.api.TraceUpdate;
 import com.comet.opik.api.Visibility;
 import com.comet.opik.api.VisibilityMode;
@@ -45,9 +47,11 @@ import com.comet.opik.api.resources.utils.resources.GuardrailsGenerator;
 import com.comet.opik.api.resources.utils.resources.GuardrailsResourceClient;
 import com.comet.opik.api.resources.utils.resources.ProjectResourceClient;
 import com.comet.opik.api.resources.utils.resources.SpanResourceClient;
+import com.comet.opik.api.resources.utils.resources.ThreadCommentResourceClient;
 import com.comet.opik.api.resources.utils.resources.TraceResourceClient;
 import com.comet.opik.api.resources.utils.spans.SpanAssertions;
 import com.comet.opik.api.resources.utils.traces.TraceAssertions;
+import com.comet.opik.api.resources.utils.traces.TraceDBUtils;
 import com.comet.opik.api.resources.utils.traces.TracePageTestAssertion;
 import com.comet.opik.api.resources.utils.traces.TraceStatsAssertion;
 import com.comet.opik.api.resources.utils.traces.TraceStreamTestAssertion;
@@ -64,6 +68,7 @@ import com.comet.opik.domain.filter.FilterQueryBuilder;
 import com.comet.opik.extensions.DropwizardAppExtensionProvider;
 import com.comet.opik.extensions.RegisterApp;
 import com.comet.opik.infrastructure.auth.RequestContext;
+import com.comet.opik.infrastructure.db.TransactionTemplateAsync;
 import com.comet.opik.infrastructure.usagelimit.Quota;
 import com.comet.opik.podam.InRangeStrategy;
 import com.comet.opik.podam.PodamFactoryUtils;
@@ -125,6 +130,7 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.EnumMap;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -132,18 +138,20 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemBuilder;
-import static com.comet.opik.api.FeedbackScoreBatchItem.builder;
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatch;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItemThread;
 import static com.comet.opik.api.Visibility.PRIVATE;
 import static com.comet.opik.api.Visibility.PUBLIC;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
+import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertComment;
 import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertComments;
-import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertTraceComment;
 import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertUpdatedComment;
 import static com.comet.opik.api.resources.utils.FeedbackScoreAssertionUtils.assertFeedbackScoreNames;
 import static com.comet.opik.api.resources.utils.QuotaLimitTestUtils.ERR_USAGE_LIMIT_EXCEEDED;
@@ -168,7 +176,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.post;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static java.util.UUID.randomUUID;
 import static java.util.function.Predicate.not;
-import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
@@ -252,6 +260,7 @@ class TracesResourceTest {
     private SpanResourceClient spanResourceClient;
     private GuardrailsResourceClient guardrailsResourceClient;
     private GuardrailsGenerator guardrailsGenerator;
+    private ThreadCommentResourceClient threadCommentResourceClient;
 
     @BeforeAll
     void setUpAll(ClientSupport client) {
@@ -267,6 +276,7 @@ class TracesResourceTest {
         this.traceResourceClient = new TraceResourceClient(this.client, baseURI);
         this.spanResourceClient = new SpanResourceClient(this.client, baseURI);
         this.guardrailsResourceClient = new GuardrailsResourceClient(client, baseURI);
+        this.threadCommentResourceClient = new ThreadCommentResourceClient(client, baseURI);
         this.guardrailsGenerator = new GuardrailsGenerator();
     }
 
@@ -706,15 +716,15 @@ class TracesResourceTest {
 
             var id = create(trace, okApikey, workspaceName);
 
-            var scores = IntStream.range(0, 5)
-                    .mapToObj(i -> builder()
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 5)
+                    .mapToObj(i -> FeedbackScoreBatchItem.builder()
                             .name("name" + i)
                             .id(id)
                             .value(BigDecimal.valueOf(i))
                             .source(ScoreSource.SDK)
                             .projectName(trace.projectName())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var batch = FeedbackScoreBatch.builder()
                     .scores(scores)
@@ -1152,15 +1162,15 @@ class TracesResourceTest {
 
             var id = create(trace, API_KEY, TEST_WORKSPACE);
 
-            var scores = IntStream.range(0, 5)
-                    .mapToObj(i -> builder()
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 5)
+                    .mapToObj(i -> FeedbackScoreBatchItem.builder()
                             .name("name" + i)
                             .id(id)
                             .value(BigDecimal.valueOf(i))
                             .source(ScoreSource.SDK)
                             .projectName(trace.projectName())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var batch = FeedbackScoreBatch.builder()
                     .scores(scores)
@@ -4655,6 +4665,7 @@ class TracesResourceTest {
                     .usage(aggregateSpansUsage(spans))
                     .createdAt(trace.createdAt())
                     .lastUpdatedAt(trace.lastUpdatedAt())
+                    .status(TraceThreadStatus.ACTIVE)
                     .build());
 
             Map<String, String> queryParams = Map.of("page", "1", "size", "5", "truncate", String.valueOf(truncate));
@@ -4859,6 +4870,57 @@ class TracesResourceTest {
             }
         }
 
+        @Test
+        @DisplayName("When filtering by thread tag, should return only threads with matching tags")
+        void whenFilterByTags__thenReturnThreadsWithMatchingTags() {
+
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var threadId = UUID.randomUUID().toString();
+
+            // Create traces
+            var traces = IntStream.range(0, 3)
+                    .mapToObj(it -> {
+                        Instant now = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+                        return createTrace().toBuilder()
+                                .projectName(projectName)
+                                .usage(null)
+                                .threadId(threadId)
+                                .endTime(now.plus(it, ChronoUnit.MILLIS))
+                                .startTime(now)
+                                .build();
+                    })
+                    .collect(Collectors.toList());
+
+            traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
+
+            var projectId = getProjectId(projectName, workspaceName, apiKey);
+
+            var createdThread = traceResourceClient.getTraceThread(threadId, projectId, apiKey, workspaceName);
+
+            // Add tags to the thread
+            var update = factory.manufacturePojo(TraceThreadUpdate.class);
+            traceResourceClient.updateThread(update, createdThread.threadModelId(), apiKey, workspaceName, 204);
+
+            List<TraceThread> expectedThreads = List.of(createdThread.toBuilder().tags(update.tags()).build());
+
+            // Create filter for the specified status
+            var statusFilter = TraceThreadFilter.builder()
+                    .field(TraceThreadField.TAGS)
+                    .operator(Operator.CONTAINS)
+                    .value(update.tags().iterator().next())
+                    .build();
+
+            assertThreadPage(null, projectId, expectedThreads, List.of(statusFilter), Map.of(), apiKey,
+                    workspaceName);
+            assertTheadStream(null, projectId, apiKey, workspaceName, expectedThreads, List.of(statusFilter));
+        }
+
         private void assertTheadStream(String projectName, UUID projectId, String apiKey, String workspaceName,
                 List<TraceThread> expectedThreads, List<TraceThreadFilter> filters) {
             var actualThreads = traceResourceClient.searchTraceThreadsStream(projectName, projectId, apiKey,
@@ -4924,13 +4986,13 @@ class TracesResourceTest {
             // Add feedback scores with different values
             String scoreName = RandomStringUtils.secure().nextAlphanumeric(10);
 
-            var scoreItems = Stream.of(threadId1, threadId2, threadId3)
-                    .map(threadId -> factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+            List<FeedbackScoreBatchItemThread> scoreItems = Stream.of(threadId1, threadId2, threadId3)
+                    .map(threadId -> factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder()
                             .threadId(threadId)
                             .projectName(projectName)
                             .name(scoreName)
                             .build())
-                    .toList();
+                    .collect(toList());
 
             Instant now = Instant.now();
             traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
@@ -4938,7 +5000,7 @@ class TracesResourceTest {
             // Create feedback scores for expected threads
             var feedbackScores = scoreItems.stream()
                     .collect(Collectors.toMap(
-                            FeedbackScoreBatchItem::threadId,
+                            FeedbackScoreItem::threadId,
                             item -> List.of(createExpectedFeedbackScore(item, now))));
 
             // Create expected threads in the correct order based on direction
@@ -4969,6 +5031,249 @@ class TracesResourceTest {
                     sortingFields);
         }
 
+        private Stream<Arguments> getFeedbackScoreFilterTestArguments() {
+            return Stream.of(
+                    Arguments.of(
+                            true,
+                            Operator.EQUAL,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateExpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateUnexpectedEqualsMatch,
+                            (Function<BigDecimal, String>) BigDecimal::toString), // Filter value function for EQUAL
+                    Arguments.of(
+                            false,
+                            Operator.EQUAL,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateExpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateUnexpectedEqualsMatch,
+                            (Function<BigDecimal, String>) BigDecimal::toString),
+                    Arguments.of(
+                            true,
+                            Operator.IS_NOT_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateUnexpectedNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> ""), // Empty value for IS_NOT_EMPTY
+                    Arguments.of(
+                            false,
+                            Operator.IS_NOT_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateUnexpectedNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> ""),
+                    Arguments.of(
+                            true,
+                            Operator.IS_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateIsEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> ""), // Empty value for IS_EMPTY
+                    Arguments.of(
+                            false,
+                            Operator.IS_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateIsEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> "")
+
+            );
+        }
+
+        private Set<Integer> generateExpectedIndices() {
+            return new HashSet<>(List.of(RandomUtils.secure().randomInt(0, 5), RandomUtils.secure().randomInt(0, 5)));
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateIsEmptyMatch(String name) {
+            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .filter(score -> !score.name().equals(name))
+                    .toList();
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateNotEmptyMatch(String name) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
+
+            scores.set(0, scores.getFirst().toBuilder()
+                    .name(name)
+                    .build());
+
+            return scores;
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateUnexpectedNotEmptyMatch(String name) {
+            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .filter(score -> !score.name().equals(name))
+                    .toList();
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateExpectedEqualsMatch(String name, BigDecimal value) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
+
+            scores.set(0, scores.getFirst().toBuilder()
+                    .name(name)
+                    .value(value)
+                    .build());
+
+            return scores;
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateUnexpectedEqualsMatch(String name, BigDecimal value) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
+
+            scores.set(0, scores.getFirst().toBuilder()
+                    .name(name)
+                    .build());
+
+            return scores;
+        }
+
+        @ParameterizedTest
+        @MethodSource("getFeedbackScoreFilterTestArguments")
+        @DisplayName("When filtering by feedback score with different operators, should return matching threads")
+        void whenFilterByFeedbackScore__thenReturnThreadsWithMatchingFeedbackScore(
+                boolean stream,
+                Operator operator,
+                Set<Integer> expectedThreadIndices,
+                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>> matchingScoreFunction,
+                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>> unmatchingScoreFunction,
+                Function<BigDecimal, String> filterValueFunction) {
+
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var project = factory.manufacturePojo(Project.class).toBuilder()
+                    .name(projectName)
+                    .build();
+
+            UUID projectId = projectResourceClient.createProject(project, apiKey, workspaceName);
+
+            // Create threads with different feedback scores
+            var allThreadIds = PodamFactoryUtils.manufacturePojoList(factory, UUID.class);
+
+            // Create traces for threads
+            var allTraces = allThreadIds
+                    .stream()
+                    .map(threadId -> createTrace().toBuilder()
+                            .threadId(threadId.toString())
+                            .projectId(null)
+                            .projectName(projectName)
+                            .startTime(Instant.now().minusSeconds(3).truncatedTo(ChronoUnit.MICROS))
+                            .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
+                            .build())
+                    .toList();
+
+            allTraces.forEach(trace -> traceResourceClient.createTrace(trace, apiKey, workspaceName));
+
+            // Add feedback scores with different values
+            Map<String, Instant> threadIdAndLastUpdateAts = new HashMap<>();
+
+            Mono.delay(Duration.ofMillis(500)).block();
+            allThreadIds.forEach(threadId -> {
+                threadIdAndLastUpdateAts.put(threadId.toString(), Instant.now());
+                traceResourceClient.closeTraceThread(threadId.toString(), null, projectName, apiKey, workspaceName);
+            });
+
+            String targetScoreName = RandomStringUtils.secure().nextAlphanumeric(30);
+            BigDecimal targetScoreValue = factory.manufacturePojo(BigDecimal.class);
+
+            // Create feedback scores based on the provided map
+            List<FeedbackScoreBatchItemThread> expectedScores = allThreadIds
+                    .stream()
+                    .filter(threadId -> isExpected(expectedThreadIndices, threadId, allThreadIds))
+                    .flatMap(threadId -> {
+                        return matchingScoreFunction.apply(targetScoreName, targetScoreValue).stream()
+                                .map(item -> item.toBuilder()
+                                        .threadId(threadId.toString())
+                                        .projectName(projectName)
+                                        .build());
+                    }).collect(Collectors.toList());
+
+            List<FeedbackScoreBatchItemThread> unexpectedScores = allThreadIds.stream()
+                    .filter(threadId -> !isExpected(expectedThreadIndices, threadId, allThreadIds))
+                    .flatMap(threadId -> {
+                        return unmatchingScoreFunction.apply(targetScoreName, targetScoreValue).stream()
+                                .map(item -> item.toBuilder()
+                                        .threadId(threadId.toString())
+                                        .projectName(projectName)
+                                        .build());
+                    }).collect(Collectors.toList());
+
+            List<FeedbackScoreBatchItemThread> scoreItems = Stream
+                    .concat(expectedScores.stream(), unexpectedScores.stream())
+                    .toList();
+
+            // Create feedback scores for threads
+            Instant feedbackScoreCreationTime = Instant.now();
+            traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
+
+            // Determine expected threads based on indices
+            var expectedThreadIds = allThreadIds.reversed()
+                    .stream()
+                    .filter(threadId -> isExpected(expectedThreadIndices, threadId, allThreadIds))
+                    .map(UUID::toString)
+                    .toList();
+
+            // Create expected threads with ALL feedback scores from matching threads
+            Comparator<TraceThread> comparing = Comparator
+                    .comparing((TraceThread traceThread) -> threadIdAndLastUpdateAts.get(traceThread.id())).reversed();
+
+            List<TraceThread> expectedThreads = expectedThreadIds.stream()
+                    .map(threadId -> {
+                        // Get ALL feedback scores for this thread (both expected and unexpected)
+                        var allFeedbackScoresForThread = scoreItems.stream()
+                                .filter(item -> item.threadId().equals(threadId))
+                                .map(item -> createExpectedFeedbackScore(item, feedbackScoreCreationTime))
+                                .toList();
+
+                        var traces = allTraces.stream()
+                                .filter(trace -> trace.threadId().equals(threadId))
+                                .toList();
+
+                        return getExpectedThreads(traces, projectId, threadId, List.of(),
+                                TraceThreadStatus.INACTIVE, allFeedbackScoresForThread).getFirst();
+                    })
+                    .sorted(comparing)
+                    .toList();
+
+            // Create filter for the specific feedback score
+            var feedbackScoreFilter = TraceThreadFilter.builder()
+                    .field(TraceThreadField.FEEDBACK_SCORES)
+                    .operator(operator)
+                    .key(targetScoreName)
+                    .value(filterValueFunction.apply(targetScoreValue))
+                    .build();
+
+            // When & Then
+            if (!stream) {
+                assertThreadPage(null, projectId, expectedThreads, List.of(feedbackScoreFilter), Map.of(), apiKey,
+                        workspaceName);
+            } else {
+                assertTheadStream(null, projectId, apiKey, workspaceName, expectedThreads,
+                        List.of(feedbackScoreFilter));
+            }
+        }
+
+        private static boolean isExpected(Set<Integer> expectedThreadIndices, UUID threadId, List<UUID> allThreadIds) {
+            return expectedThreadIndices.stream()
+                    .anyMatch(index -> allThreadIds.get(index).toString().equals(threadId.toString()));
+        }
     }
 
     private List<TraceThread> getExpectedThreads(List<Trace> expectedTraces, UUID projectId, String threadId,
@@ -4999,7 +5304,9 @@ class TracesResourceTest {
                                 .endTime())
                         .numberOfMessages(expectedTraces.size() * 2L)
                         .id(threadId)
-                        .totalEstimatedCost(getTotalEstimatedCost(spans))
+                        .totalEstimatedCost(Optional.ofNullable(getTotalEstimatedCost(spans))
+                                .filter(value -> value.compareTo(BigDecimal.ZERO) > 0)
+                                .orElse(null))
                         .usage(getUsage(spans))
                         .status(status)
                         .feedbackScores(feedbackScores)
@@ -5635,7 +5942,7 @@ class TracesResourceTest {
                             .projectName(finalTraces.get(i).projectName())
                             .id(finalTraces.get(i).id())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scoreForSpan, apiKey, workspaceName);
 
@@ -5901,7 +6208,8 @@ class TracesResourceTest {
             traceResourceClient.closeTraceThread(threadId1, null, projectName, apiKey, workspaceName);
             traceResourceClient.closeTraceThread(threadId2, null, projectName, apiKey, workspaceName);
 
-            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+            List<FeedbackScoreBatchItemThread> scoreItems = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(threadId1)
                             .projectName(projectName)
@@ -5971,7 +6279,7 @@ class TracesResourceTest {
         @ParameterizedTest
         @MethodSource("threadFeedbackScoreTestCases")
         @DisplayName("Thread feedback scores contract test")
-        void scoreBatchOfThreads_contractTest(List<FeedbackScoreBatchItem> scores, int expectedStatus,
+        void threadFeedbackScores_contractTest(List<FeedbackScoreBatchItemThread> scores, int expectedStatus,
                 String expectedError) {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
@@ -5980,47 +6288,12 @@ class TracesResourceTest {
 
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            if (expectedStatus == HttpStatus.SC_NO_CONTENT) {
-
-                Map<String, List<FeedbackScoreBatchItem>> scoresByProjectName = scores.stream()
-                        .collect(groupingBy(FeedbackScoreBatchItem::projectName));
-
-                scoresByProjectName.forEach((projectName, projectScores) -> {
-                    projectResourceClient.createProject(projectName, apiKey, workspaceName);
-
-                    // Create traces with threads first (threads need traces to exist)
-                    List<Trace> traces = projectScores.stream()
-                            .map(item -> createTrace().toBuilder()
-                                    .threadId(item.threadId())
-                                    .projectId(null)
-                                    .projectName(projectName)
-                                    .startTime(Instant.now().minusSeconds(5))
-                                    .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
-                                    .build())
-                            .toList();
-
-                    traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
-                });
-
-                Mono.delay(Duration.ofMillis(500)).block();
-
-                // Close threads
-                scoresByProjectName.forEach((projectName, projectScores) -> {
-                    projectScores.forEach(item -> {
-                        traceResourceClient.closeTraceThread(item.threadId(), null, projectName, apiKey, workspaceName);
-                    });
-                });
-            }
-
             // When
             try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
+
                 // Then
                 assertThat(response.getStatus()).isEqualTo(expectedStatus);
-                if (expectedStatus == HttpStatus.SC_NO_CONTENT) {
-                    assertThat(response.hasEntity()).isFalse();
-                } else {
-                    assertThat(response.readEntity(ErrorMessage.class).errors()).contains(expectedError);
-                }
+                assertThat(response.readEntity(ErrorMessage.class).errors()).contains(expectedError);
             }
         }
 
@@ -6037,15 +6310,15 @@ class TracesResourceTest {
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             projectResourceClient.createProject(projectName, apiKey, workspaceName);
 
-            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils
-                    .manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(UUID.randomUUID().toString())
                             .projectName(projectName)
                             .projectId(null) // Project ID is not required for thread scores
                             .source(ScoreSource.SDK)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             List<Trace> traces = scores.stream()
                     .map(item -> createTrace().toBuilder()
@@ -6078,15 +6351,15 @@ class TracesResourceTest {
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             projectResourceClient.createProject(projectName, apiKey, workspaceName);
 
-            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils
-                    .manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(UUID.randomUUID().toString())
                             .projectName(projectName)
                             .projectId(null) // Project ID is not required for thread scores
                             .source(ScoreSource.SDK)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             // When
             try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
@@ -6096,9 +6369,10 @@ class TracesResourceTest {
             }
         }
 
-        private static void assertOpenThreadScoreConflict(List<FeedbackScoreBatchItem> scores, Response response) {
+        private static void assertOpenThreadScoreConflict(List<FeedbackScoreBatchItemThread> scores,
+                Response response) {
             String threadIds = scores.stream()
-                    .map(FeedbackScoreBatchItem::threadId)
+                    .map(FeedbackScoreItem::threadId)
                     .sorted()
                     .collect(Collectors.joining(", "));
 
@@ -6119,7 +6393,7 @@ class TracesResourceTest {
             // Valid case
             String score1 = RandomStringUtils.secure().nextAlphanumeric(10);
 
-            var validScore = initFeedbackScoreItem()
+            var validScore = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -6127,7 +6401,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing thread ID case
-            var missingThreadIdScore = initFeedbackScoreItem()
+            var missingThreadIdScore = initThreadFeedbackItem()
                     .threadId(null)
                     .projectName(projectName)
                     .projectId(null)
@@ -6135,7 +6409,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing thread ID
-            var blankThreadId = initFeedbackScoreItem()
+            var blankThreadId = initThreadFeedbackItem()
                     .threadId("")
                     .projectName(projectName)
                     .projectId(null)
@@ -6143,7 +6417,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing value
-            var missingValueCase = initFeedbackScoreItem()
+            var missingValueCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -6151,21 +6425,21 @@ class TracesResourceTest {
                     .value(null)
                     .build();
 
-            var missingNameCase = initFeedbackScoreItem()
+            var missingNameCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
                     .name(null)
                     .build();
 
-            var blankNameCase = initFeedbackScoreItem()
+            var blankNameCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
                     .name("")
                     .build();
 
-            var missingSourceCase = initFeedbackScoreItem()
+            var missingSourceCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -6173,9 +6447,6 @@ class TracesResourceTest {
                     .build();
 
             return Stream.of(
-                    // Valid case - 204 No Content
-                    arguments(List.of(validScore), HttpStatus.SC_NO_CONTENT, null),
-
                     // Missing thread ID - 422 Unprocessable Entity
                     arguments(List.of(missingThreadIdScore), HttpStatus.SC_UNPROCESSABLE_ENTITY,
                             "scores[0].threadId must not be blank"),
@@ -6202,7 +6473,11 @@ class TracesResourceTest {
         }
     }
 
-    private FeedbackScore createExpectedFeedbackScore(FeedbackScoreBatchItem item, Instant now) {
+    private FeedbackScoreBatchItemThread.FeedbackScoreBatchItemThreadBuilder<?, ?> initThreadFeedbackItem() {
+        return factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder();
+    }
+
+    private FeedbackScore createExpectedFeedbackScore(FeedbackScoreItem item, Instant now) {
         return FeedbackScore.builder()
                 .name(item.name())
                 .value(item.value())
@@ -6254,14 +6529,15 @@ class TracesResourceTest {
             Mono.delay(Duration.ofMillis(500)).block();
             traceResourceClient.closeTraceThread(threadId, null, projectName, apiKey, workspaceName);
 
-            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class)
+            List<FeedbackScoreBatchItemThread> scoreItems = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
                     .stream()
                     .map(item -> item.toBuilder()
                             .threadId(threadId)
                             .projectName(projectName)
                             .projectId(null)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             // Create expected thread with initial scores
             Instant now = Instant.now();
@@ -6978,7 +7254,8 @@ class TracesResourceTest {
                             .map(item -> FeedbackScoreMapper.INSTANCE.toFeedbackScoreBatchItem(
                                     span.id(), projectName, item)))
                     .toList();
-            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName, apiKey);
+            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName,
+                    apiKey);
 
             getAndAssertPage(workspaceName, projectName, null, List.of(), traces, traces.reversed(), List.of(), apiKey);
             getAndAssertPageSpans(workspaceName, projectName, List.of(), spans, spans.reversed(), List.of(), apiKey);
@@ -7157,7 +7434,8 @@ class TracesResourceTest {
                             .map(item -> FeedbackScoreMapper.INSTANCE.toFeedbackScoreBatchItem(
                                     span.id(), projectName, item)))
                     .toList();
-            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName, apiKey);
+            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName,
+                    apiKey);
 
             getAndAssertPage(workspaceName, projectName, null, List.of(), traces, traces.reversed(), List.of(), apiKey);
             getAndAssertPageSpans(workspaceName, projectName, List.of(), spans, spans.reversed(), List.of(), apiKey);
@@ -7700,7 +7978,7 @@ class TracesResourceTest {
             // Get created comment by id and assert
             Comment actualComment = traceResourceClient.getCommentById(expectedComment.id(), traceId, API_KEY,
                     TEST_WORKSPACE, 200);
-            assertTraceComment(expectedComment, actualComment);
+            assertComment(expectedComment, actualComment);
         }
 
         @Test
@@ -8097,7 +8375,7 @@ class TracesResourceTest {
                             IntStream.range(0, 1001)
                                     .mapToObj(__ -> initFeedbackScoreItem()
                                             .projectName(DEFAULT_PROJECT).build())
-                                    .toList())
+                                    .collect(toList()))
                             .build(), "scores size must be between 1 and 1000"),
                     arguments(
                             FeedbackScoreBatch.builder()
@@ -8247,7 +8525,8 @@ class TracesResourceTest {
         @ParameterizedTest
         @MethodSource("invalidRequestBodyParams")
         @DisplayName("when batch request is invalid, then return bad request")
-        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatch batch, String errorMessage) {
+        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatchContainer batch,
+                String errorMessage) {
             try (var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
                     .path("feedback-scores")
                     .request()
@@ -8377,12 +8656,12 @@ class TracesResourceTest {
                     .build();
             var id = create(expectedTrace, API_KEY, TEST_WORKSPACE);
 
-            var scores = IntStream.range(0, 1000)
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 1000)
                     .mapToObj(__ -> initFeedbackScoreItem()
                             .projectName(DEFAULT_PROJECT)
                             .id(id)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
             traceResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
         }
 
@@ -8399,7 +8678,7 @@ class TracesResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertErrorResponse(actualResponse, "trace id must be a version 7 UUID", 400);
             }
@@ -8422,18 +8701,18 @@ class TracesResourceTest {
 
             traceResourceClient.batchCreateTraces(traces, API_KEY, TEST_WORKSPACE);
 
-            var scores = traces.stream()
+            List<FeedbackScoreBatchItem> scores = traces.stream()
                     .map(trace -> initFeedbackScoreItem()
                             .id(trace.id())
                             .projectName(projectNameModifier.apply(projectName))
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
 
             var expectedTracesWithScores = traces.stream()
                     .map(trace -> {
-                        FeedbackScoreBatchItem feedbackScoreBatchItem = scores.stream()
+                        FeedbackScoreItem feedbackScoreBatchItem = scores.stream()
                                 .filter(score -> score.id().equals(trace.id()))
                                 .findFirst()
                                 .orElseThrow();
@@ -8453,12 +8732,11 @@ class TracesResourceTest {
         }
     }
 
-    private FeedbackScoreBatchItemBuilder initFeedbackScoreItem() {
-        return factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
-                .threadId(null);
+    private FeedbackScoreBatchItemBuilder<?, ?> initFeedbackScoreItem() {
+        return factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder();
     }
 
-    private FeedbackScore mapFeedbackScore(FeedbackScoreBatchItem feedbackScoreBatchItem) {
+    private FeedbackScore mapFeedbackScore(FeedbackScoreItem feedbackScoreBatchItem) {
         return FeedbackScore.builder()
                 .name(feedbackScoreBatchItem.name())
                 .value(feedbackScoreBatchItem.value())
@@ -8772,6 +9050,11 @@ class TracesResourceTest {
             // Create multiple threads with different values
             List<String> threadIds = PodamFactoryUtils.manufacturePojoList(factory, String.class);
 
+            Map<String, TraceThreadUpdate> updates = threadIds.stream()
+                    .collect(Collectors.toMap(
+                            threadId -> threadId,
+                            threadId -> factory.manufacturePojo(TraceThreadUpdate.class)));
+
             // Create traces for each thread with varying number of messages
             List<Trace> allTraces = new ArrayList<>();
             Map<String, List<Trace>> tracesByThread = new HashMap<>();
@@ -8790,7 +9073,20 @@ class TracesResourceTest {
                 traceResourceClient.batchCreateTraces(threadTraces, apiKey, workspaceName);
 
                 threadTraces.forEach(trace -> {
-                    List<Span> spans = createSpans(trace, projectName, null, null);
+                    List<Span> spans = PodamFactoryUtils.manufacturePojoList(factory, Span.class).stream()
+                            .map(span -> span.toBuilder()
+                                    .projectName(projectName)
+                                    .traceId(trace.id())
+                                    .usage(spanResourceClient.getTokenUsage())
+                                    .totalEstimatedCost(null)
+                                    .model(spanResourceClient.randomModel().toString())
+                                    .provider(spanResourceClient.provider())
+                                    .feedbackScores(null)
+                                    .comments(null)
+                                    .errorInfo(null)
+                                    .build())
+                            .toList();
+
                     spansByThread.computeIfAbsent(threadId, k -> new ArrayList<>()).addAll(spans);
                 });
 
@@ -8805,12 +9101,41 @@ class TracesResourceTest {
             UUID projectId = getProjectId(projectName, workspaceName, apiKey);
 
             // Build expected threads from our created traces
-            List<TraceThread> expectedThreads = threadIds.stream()
-                    .map(threadId -> getExpectedThreads(tracesByThread.get(threadId), projectId, threadId,
-                            spansByThread.get(threadId), TraceThreadStatus.ACTIVE))
+            List<TraceThread> threads = threadIds.stream()
+                    .map(threadId -> {
+
+                        List<Span> spansWithTotalEstimatedCost = spansByThread.get(threadId).stream()
+                                .map(span -> span.toBuilder()
+                                        .totalEstimatedCost(calculateEstimatedCost(List.of(span)))
+                                        .build())
+                                .toList();
+
+                        // Update thread to add tags
+                        var createdThread = traceResourceClient.getTraceThread(threadId, projectId, apiKey,
+                                workspaceName);
+                        traceResourceClient.updateThread(updates.get(threadId), createdThread.threadModelId(), apiKey,
+                                workspaceName, 204);
+
+                        return getExpectedThreads(tracesByThread.get(threadId), projectId, threadId,
+                                spansWithTotalEstimatedCost, TraceThreadStatus.ACTIVE)
+                                .stream()
+                                .map(thread -> thread.toBuilder()
+                                        .tags(updates.get(threadId).tags())
+                                        .build())
+                                .toList();
+                    })
                     .flatMap(List::stream)
+                    .toList();
+
+            List<TraceThread> expectedThreads = threads
+                    .stream()
                     .sorted(comparator)
                     .toList();
+
+            // mark threads are opened
+            threads.forEach(thread -> {
+                traceResourceClient.openTraceThread(thread.id(), thread.projectId(), null, apiKey, workspaceName);
+            });
 
             // Get trace threads with sorting
             TraceThreadPage traceThreadPage = traceResourceClient.getTraceThreads(projectId, null,
@@ -8824,6 +9149,7 @@ class TracesResourceTest {
         }
 
         private Stream<Arguments> getTraceThreads__whenSortingByValidFields__thenReturnTraceThreadsSorted() {
+            Comparator<TraceThread> tagsComparator = Comparator.comparing(thread -> thread.tags().toString());
             return Stream.of(
                     Arguments.of(
                             Comparator.comparing(TraceThread::totalEstimatedCost)
@@ -8892,7 +9218,13 @@ class TracesResourceTest {
                     Arguments.of(
                             Comparator.comparing(TraceThread::createdAt).reversed()
                                     .thenComparing(Comparator.comparing(TraceThread::lastUpdatedAt).reversed()),
-                            SortingField.builder().field(SortableFields.CREATED_AT).direction(Direction.DESC).build()));
+                            SortingField.builder().field(SortableFields.CREATED_AT).direction(Direction.DESC).build()),
+                    Arguments.of(
+                            tagsComparator,
+                            SortingField.builder().field(SortableFields.TAGS).direction(Direction.ASC).build()),
+                    Arguments.of(
+                            tagsComparator.reversed(),
+                            SortingField.builder().field(SortableFields.TAGS).direction(Direction.DESC).build()));
         }
 
         @ParameterizedTest
@@ -9214,6 +9546,7 @@ class TracesResourceTest {
             });
 
             // When: Manually close the thread
+            Mono.delay(Duration.ofMillis(500)).block();
             traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
 
             // Then: Assert that the thread is closed using getTraceThreads API
@@ -9237,6 +9570,210 @@ class TracesResourceTest {
 
             TraceAssertions.assertThreads(expectedReopenedThreads, reopenedThreadPage.content());
         }
+
+        @Test
+        @DisplayName("when trace thread was created before the entity was introduced, then it should be created as inactive")
+        void manualCloseAndReopeningTraceThread__whenThreadCreatedBeforeEntityIntroduced__thenInactive(
+                TransactionTemplateAsync templateAsync) {
+
+            // Given: Ingestion of a trace with a thread
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            UUID projectId = projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            String threadId = randomUUID().toString();
+
+            // Create a trace with the thread
+            Trace trace = createTrace().toBuilder()
+                    .threadId(threadId)
+                    .projectId(projectId)
+                    .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
+                    .createdBy(USER)
+                    .lastUpdatedBy(USER)
+                    .build();
+
+            // Create the trace via DB to simulate the scenario where the thread was created before the entity was introduced
+            TraceDBUtils.createTraceViaDB(trace, workspaceId, templateAsync);
+
+            // When: Manually close the thread
+            traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
+
+            // Then: Assert that the thread is closed using getTraceThreads API
+            var closedThreadPage = traceResourceClient.getTraceThreads(projectId, projectName, apiKey, workspaceName,
+                    List.of(), List.of(), Map.of());
+
+            var expectedClosedThreads = getExpectedThreads(List.of(trace), projectId, threadId, List.of(),
+                    TraceThreadStatus.INACTIVE);
+
+            TraceAssertions.assertThreads(expectedClosedThreads, closedThreadPage.content());
+        }
+    }
+
+    @Nested
+    @DisplayName("Thread Comment:")
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    class ThreadComment {
+
+        @Test
+        void createCommentForNonExistingThreadFail() {
+            threadCommentResourceClient.generateAndCreateComment(generator.generate(), API_KEY, TEST_WORKSPACE, 404);
+        }
+
+        @Test
+        void createAndGetComment() {
+            // Create comment for existing thread
+            var thread = createThread();
+            Comment expectedComment = threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(),
+                    API_KEY, TEST_WORKSPACE,
+                    201);
+
+            // Get created comment by id and assert
+            Comment actualComment = threadCommentResourceClient.getCommentById(expectedComment.id(),
+                    thread.threadModelId(), API_KEY,
+                    TEST_WORKSPACE, 200);
+            assertComment(expectedComment, actualComment);
+        }
+
+        @Test
+        void createAndUpdateComment() {
+            // Create comment for existing thread
+            var thread = createThread();
+            Comment expectedComment = threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(),
+                    API_KEY, TEST_WORKSPACE,
+                    201);
+
+            // Get created comment by id and assert
+            Comment actualComment = threadCommentResourceClient.getCommentById(expectedComment.id(),
+                    thread.threadModelId(), API_KEY,
+                    TEST_WORKSPACE, 200);
+
+            // Update existing comment
+            String updatedText = factory.manufacturePojo(String.class);
+            threadCommentResourceClient.updateComment(updatedText, expectedComment.id(), API_KEY,
+                    TEST_WORKSPACE, 204);
+
+            // Get comment by id and assert it was updated
+            Comment updatedComment = threadCommentResourceClient.getCommentById(expectedComment.id(),
+                    thread.threadModelId(), API_KEY,
+                    TEST_WORKSPACE, 200);
+            assertUpdatedComment(actualComment, updatedComment, updatedText);
+        }
+
+        @Test
+        void deleteComments() {
+            // Create comments for existing thread
+            var thread = createThread();
+
+            List<Comment> expectedComments = IntStream.range(0, 5)
+                    .mapToObj(i -> threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 201))
+                    .toList().reversed();
+
+            // Check it was created
+            expectedComments.forEach(
+                    comment -> threadCommentResourceClient.getCommentById(comment.id(), thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 200));
+
+            // Delete comment
+            BatchDelete request = BatchDelete.builder()
+                    .ids(expectedComments.stream().map(Comment::id).collect(Collectors.toSet())).build();
+            threadCommentResourceClient.deleteComments(request, API_KEY, TEST_WORKSPACE);
+
+            // Verify comments were actually deleted via get and update endpoints
+            expectedComments.forEach(
+                    comment -> threadCommentResourceClient.getCommentById(comment.id(), thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 404));
+            expectedComments
+                    .forEach(comment -> threadCommentResourceClient.updateComment(factory.manufacturePojo(String.class),
+                            comment.id(), API_KEY, TEST_WORKSPACE, 404));
+        }
+
+        @Test
+        void getThreadWithComments() {
+            // Create comments for existing thread
+            var thread = createThread();
+
+            List<Comment> expectedComments = IntStream.range(0, 5)
+                    .mapToObj(i -> threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 201))
+                    .toList().reversed();
+
+            TraceThread actualThread = traceResourceClient.getTraceThread(thread.id(), thread.projectId(), API_KEY,
+                    TEST_WORKSPACE);
+
+            assertComments(expectedComments, actualThread.comments().reversed());
+        }
+
+        @Test
+        void getThreadsWithComments() {
+            // Create comments for existing thread
+            var thread = createThread();
+
+            List<Comment> expectedComments = IntStream.range(0, 5)
+                    .mapToObj(i -> threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 201))
+                    .toList().reversed();
+
+            var threadsPage = traceResourceClient.getTraceThreads(thread.projectId(), null, API_KEY, TEST_WORKSPACE,
+                    null, null, null);
+
+            assertComments(expectedComments, threadsPage.content().getFirst().comments().reversed());
+        }
+    }
+
+    @Nested
+    @DisplayName("Thread Update:")
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    class ThreadUpdate {
+
+        @Test
+        void updateNonExistingThreadFail() {
+            traceResourceClient.updateThread(factory.manufacturePojo(TraceThreadUpdate.class), generator.generate(),
+                    API_KEY, TEST_WORKSPACE, 404);
+        }
+
+        @Test
+        void createAndUpdateThread() {
+            // Create comment for existing thread
+            var thread = createThread();
+
+            // Check that it doesn't have tags
+            assertThat(thread.tags()).isNull();
+
+            // Update thread
+            var update = factory.manufacturePojo(TraceThreadUpdate.class);
+            traceResourceClient.updateThread(update, thread.threadModelId(), API_KEY, TEST_WORKSPACE, 204);
+
+            // Check that update was applied
+            var actualThread = traceResourceClient.getTraceThread(thread.id(), thread.projectId(), API_KEY,
+                    TEST_WORKSPACE);
+            TraceAssertions.assertThreads(List.of(thread.toBuilder()
+                    .tags(update.tags())
+                    .build()), List.of(actualThread));
+
+        }
+    }
+
+    private TraceThread createThread() {
+        var threadId = UUID.randomUUID().toString();
+        var projectName = UUID.randomUUID().toString();
+
+        var traces = IntStream.range(0, 5)
+                .mapToObj(i -> createTrace().toBuilder()
+                        .threadId(threadId)
+                        .projectName(projectName)
+                        .build())
+                .toList();
+
+        traceResourceClient.batchCreateTraces(traces, API_KEY, TEST_WORKSPACE);
+        var projectId = getProjectId(projectName, TEST_WORKSPACE, API_KEY);
+
+        return traceResourceClient.getTraceThread(threadId, projectId, API_KEY, TEST_WORKSPACE);
     }
 
     private void assertErrorResponse(Response actualResponse, String message, int expected) {
@@ -9268,7 +9805,7 @@ class TracesResourceTest {
         }
     }
 
-    private void createAndAssertForSpan(FeedbackScoreBatch request, String workspaceName, String apiKey) {
+    private void createAndAssertForSpan(FeedbackScoreBatchContainer request, String workspaceName, String apiKey) {
         try (var actualResponse = client.target(URL_TEMPLATE_SPANS.formatted(baseURI))
                 .path("feedback-scores")
                 .request()
@@ -9311,7 +9848,7 @@ class TracesResourceTest {
         AuthTestUtils.mockGetWorkspaceIdByName(wireMock.server(), workspaceName, workspaceId);
     }
 
-    private List<List<FeedbackScoreBatchItem>> createMultiValueTraceThreadScores(
+    private List<List<FeedbackScoreBatchItemThread>> createMultiValueTraceThreadScores(
             List<String> multipleValuesFeedbackScores,
             Project project, String apiKey, String workspaceName) {
         return IntStream.range(0, multipleValuesFeedbackScores.size())
@@ -9335,18 +9872,183 @@ class TracesResourceTest {
                     Mono.delay(Duration.ofMillis(500)).block();
                     traceResourceClient.closeTraceThread(threadId, project.id(), null, apiKey, workspaceName);
 
-                    List<FeedbackScoreBatchItem> scores = multipleValuesFeedbackScores.stream()
-                            .map(name -> initFeedbackScoreItem()
+                    List<FeedbackScoreBatchItemThread> scores = multipleValuesFeedbackScores.stream()
+                            .map(name -> factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder()
                                     .name(name)
                                     .projectName(project.name())
                                     .threadId(threadId)
                                     .build())
-                            .toList();
+                            .collect(Collectors.toList());
 
                     traceResourceClient.threadFeedbackScores(scores, apiKey, workspaceName);
 
                     return scores;
                 }).toList();
+    }
+
+    @Nested
+    @DisplayName("Thread Reopening and Manual Score Deletion")
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    class ThreadReopeningManualScoreDeletion {
+
+        @Test
+        @DisplayName("When thread is closed, manually scored, and reopened, then manual scores are deleted")
+        void whenThreadIsClosedManuallyScored_andReopened_thenManualScoresAreDeleted() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var projectId = projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            var threadId = UUID.randomUUID().toString();
+
+            // Create initial traces for the thread
+            List<Trace> initialTraces = IntStream.range(0, 3)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(initialTraces, apiKey, workspaceName);
+
+            // Wait for thread processing
+            Mono.delay(Duration.ofMillis(500)).block();
+
+            // Close the thread
+            traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
+
+            // Wait for thread to be closed
+
+            // Add manual scores to the closed thread
+            List<FeedbackScoreBatchItemThread> manualScores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(threadId)
+                            .projectName(projectName)
+                            .source(ScoreSource.UI)
+                            .build())
+                    .collect(Collectors.toList());
+
+            manualScores.set(0, manualScores.get(0)
+                    .toBuilder()
+                    .source(ScoreSource.SDK)
+                    .build());
+
+            traceResourceClient.threadFeedbackScores(manualScores, apiKey, workspaceName);
+
+            // Create new traces to reopen the thread
+            List<Trace> newTraces = IntStream.range(0, 2)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(newTraces, apiKey, workspaceName);
+
+            // Wait for thread to be reopened and manual scores to be deleted
+            Awaitility.await()
+                    .atMost(10, TimeUnit.SECONDS)
+                    .untilAsserted(() -> {
+                        var actualThreads = traceResourceClient.getTraceThreads(projectId, null, apiKey, workspaceName,
+                                null, null, null);
+
+                        List<Trace> allTraces = Stream.concat(initialTraces.stream(), newTraces.stream()).toList();
+
+                        var expectedReopenedThreads = getExpectedThreads(allTraces, projectId, threadId, List.of(),
+                                TraceThreadStatus.ACTIVE);
+
+                        // Verify manual scores have been deleted
+                        TraceAssertions.assertThreads(expectedReopenedThreads, actualThreads.content());
+                    });
+        }
+
+        @Test
+        @DisplayName("When thread is closed, manually scored, and reopened, then only manual scores are deleted (not automatic scores)")
+        void whenThreadIsClosedWithMixedScores_andReopened_thenOnlyManualScoresAreDeleted() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var projectId = projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            var threadId = UUID.randomUUID().toString();
+
+            // Create initial traces for the thread
+            List<Trace> initialTraces = IntStream.range(0, 2)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(initialTraces, apiKey, workspaceName);
+
+            // Wait for thread processing
+            Mono.delay(Duration.ofMillis(500)).block();
+
+            // Close the thread
+            traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
+
+            // Wait for thread to be closed
+
+            // Add mixed scores to the closed thread (manual and automatic)
+            List<FeedbackScoreBatchItemThread> mixedScores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(threadId)
+                            .projectName(projectName)
+                            .source(ScoreSource.SDK)
+                            .build())
+                    .collect(Collectors.toList());
+
+            mixedScores.set(0, mixedScores.getFirst()
+                    .toBuilder()
+                    .source(ScoreSource.ONLINE_SCORING)
+                    .build());
+
+            Instant createdAt = Instant.now();
+            traceResourceClient.threadFeedbackScores(mixedScores, apiKey, workspaceName);
+
+            // Create new traces to reopen the thread
+            List<Trace> newTraces = IntStream.range(0, 2)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(newTraces, apiKey, workspaceName);
+
+            // Wait for thread to be reopened and manual scores to be deleted
+            Awaitility.await()
+                    .atMost(10, TimeUnit.SECONDS)
+                    .untilAsserted(() -> {
+
+                        var actualThreads = traceResourceClient.getTraceThreads(projectId, null, apiKey, workspaceName,
+                                null, null, null);
+
+                        List<Trace> allTraces = Stream.concat(initialTraces.stream(), newTraces.stream()).toList();
+
+                        var expectedReopenedThreads = getExpectedThreads(allTraces, projectId, threadId, List.of(),
+                                TraceThreadStatus.ACTIVE,
+                                List.of(createExpectedFeedbackScore(mixedScores.getFirst(), createdAt)));
+
+                        // Verify manual scores have been deleted, but automatic scores remain
+                        TraceAssertions.assertThreads(expectedReopenedThreads, actualThreads.content());
+                    });
+        }
     }
 
 }
